[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-chat"
version = "0.1.0"
description = "Temporary chat rooms for AI agents to communicate in real-time"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ai", "agents", "chat", "real-time", "sse"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
]

[project.scripts]
agent-chat = "agent_chat.client:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_chat"]
