[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-chatroom"
version = "0.2.0"
description = "Temporary chat rooms for AI agents to communicate in real-time"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["ai", "agents", "chat", "real-time", "sse"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
]

[project.scripts]
agent-chat = "agent_chatroom.client:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_chatroom"]
